2008-02-08  Ben Elliston  <bje@gnu.org>

	* baseboards/cris-sim.exp: Fix MS-DOS line termination.

2007-12-28  Joseph Myers  <joseph@codesourcery.com>

        * lib/target.exp (default_link): Initialize nobjects before use.

2007-12-06  Ben Elliston  <bje@gnu.org>

	* lib/dg.exp (dg_bogus): Comment fix.

2007-10-31  DJ Delorie  <dj@redhat.com>

	* lib/framework.exp (open_logs): Line buffer the .sum file.

2007-09-04  Matt Kraai  <kraai@ftbfs.org>

	* doc/user.xml (Configuration): Fix typos.
	* doc/dejagnu.texi: Regenerate.

2007-08-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* lib/remote.exp (standard_send): Correct quoting.

2007-05-17  Ben Elliston  <bje@gnu.org>

	* doc/user.xml: Correct the syntax for running apt-get on a Debian
	GNU/Linux system. From Peter Welte <weltepe@gmail.com>.

2007-04-30  Bob Wilson  <bob.wilson@acm.org>

	* baseboards/xtensa-sim.exp: Set target_install.  Stop using
	basic-sim.exp.  Run the simulator with --turbo option.  Replace
	needs_status_wrapper with the simulator's --exit_with_target_code
	option. 

2006-10-15  Rob Savoye  <rob@bertha.welcomehome.org>

	* dejagnu.h: Add support for for expected failures and
	unexpected successes.

2005-05-06  Andrew Fyfe <a.fyfe@tiscali.co.uk>

	* doc/Makefile.am: Fix install path for man page.
	* Makefiles: Regenerated.

2006-08-29  Ben Elliston  <bje@gnu.org>

	* runtest.exp (usage): Use "triplet" instead of "config name".

2006-07-13  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (DOCBOOK2RTF): Fix typo.
	* Makefile.in: Regenerated.
	* lib/libgloss.exp (process_multilib_options): Use -- to handle
	options starting with hyphens.

2006-06-23  Eric Botcazou  <ebotcazou@adacore.com>

	* libgloss.exp (find_gnatmake): Rewrite.

2006-03-30  Daniel Jacobowitz  <dan@codesourcery.com>

	* rsh.exp (rsh_exec): Handle inp and outp arguments.  Use
	local_exec to run rsh.  Return failure if rsh times out.
	* remote.exp (local_exec): Handle "|& cat" we added when deciding